Fixed anonymous scan not showing list results

--- a/src/pages/found-pet/found-pet.scss
+++ b/src/pages/found-pet/found-pet.scss
@@ -1,8 +1,8 @@
 page-found-pet {
-  div {
-    margin-top: 20%;
-    margin-bottom: 30%;
-  }
+  // div {
+  //   margin-top: 20%;
+  //   margin-bottom: 30%;
+  // }
 
   // #action-button {
   //   color: white;
